# dinle

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
common/: dinle-commands.h
include/: Makefile.am  dinle-commands.h
lib/: Makefile.am
lib/include/: Makefile.am
lib/include/dinle/: Makefile.am  dinle.h
lib/src/: Makefile.am  dinle.c
m4/: dinle_auto.m4  dinle_check_flag.m4
src/: Makefile.am  dinle-archive-manager.c  dinle-archive-manager.h  dinle-commands.h  dinle-config-manager.c  dinle-config-manager.h  dinle-db-sqlite.c  dinle-db-sqlite.h  dinle-db.c  dinle-db.h  dinle-media-file-mp3.c  dinle-media-file-mp3.h  dinle-media-file.c  dinle-media-file.h  dinle-media-metadata.c  dinle-media-metadata.h  dinle-playlist.c  dinle-playlist.h  dinle-session-handler-auth.c  dinle-session-handler-auth.h  dinle-session-handler-new.c  dinle-session-handler-new.h  dinle-session-handler-ready.c  dinle-session-handler-ready.h  dinle-session-handler.c  dinle-session-handler.h  dinle-session-manager.c  dinle-session-manager.h  dinle-session.c  dinle-session.h  dinle-tags.h  main.c
